--- a/public/css/index.css
+++ b/public/css/index.css
@@ -29,12 +29,12 @@ body {
   border-bottom: 1px solid #e9e9e9;
 }
 
-.delete-comment {
+.delete-message {
   color: red;
   font-size: 1.75rem;
 }
 
-.delete-comment:hover {
+.delete-message:hover {
   color: #670000;
   cursor: pointer;
 }
